test/corpus/test.test
===
coords
===
setblock ~ ~ ~ stone
setblock ^ ^ ^ air
setblock 1 1 1 cobblestone
---
(source_file
  (command
    (command_name)
    (argument
      (coordinates))
    (argument
      (coordinates))
    (argument
      (coordinates))
    (argument
      (bare_word)))
  (command
    (command_name)
    (argument
      (coordinates))
    (argument
      (coordinates))
    (argument
      (coordinates))
    (argument
      (bare_word)))
  (command
    (command_name)
    (argument
      (number))
    (argument
      (number))
    (argument
      (number))
    (argument
      (bare_word))))
===
range
===
execute if score @s fcyball.hspeed matches -10..-1 unless block ^ ^ ^-3 #minecraft:air run scoreboard players set @s fcyball.hspeed.tgt 0
---
(source_file
  (command
    name: (command_name)
    argument: (argument
      (bare_word))
    argument: (argument
      (bare_word))
    argument: (argument
      (selector))
    argument: (argument
      (bare_word))
    argument: (argument
      (bare_word))
    argument: (argument
      (range
        (number)
        (number)))
    argument: (argument
      (bare_word))
    argument: (argument
      (bare_word))
    argument: (argument
      (coordinates))
    argument: (argument
      (coordinates))
    argument: (argument
      (coordinates
        (number)))
    argument: (argument
      (resource_location))
    run: (run))
  (command
    name: (command_name)
    argument: (argument
      (bare_word))
    argument: (argument
      (bare_word))
    argument: (argument
      (selector))
    argument: (argument
      (bare_word))
    argument: (argument
      (number))))
===
arrays
===
tellraw @s {}
---
